# dmarc-collector

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
dockerfiles/: docker-compose.yml
dockerfiles/dmarc-collector/: Dockerfile
dockerfiles/elasticsearch/: Dockerfile
dockerfiles/kibana/: Dockerfile
example/: rfc_5965_B2.eml  rfc_6591_ARF_B1.eml  rfc_7489_B5.eml
src/: es.py
src/dmarcanalyzer/: cli.py
src/dmarcanalyzer/elastic/: __init__.py
src/dmarccollector/: __init__.py  cli.py
src/dmarccollector/elastic/: __init__.py  exceptions.py  mappings.py
tests/: test_example.py
